client: update plasma-window-management to v17

BUG: 479492